# wmenu

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cspell.config.yaml
.cspell/: custom-dictionary-workspace.txt
.github/config/: wmenu.dict
.github/workflows/: msbuild.yml
sources/: main.cpp
sources/commandLine/: commandLine.cpp
sources/commandLine/options/font/: font.cpp  font.hpp
sources/commandLine/options/prompt/: prompt.cpp  prompt.hpp
sources/gui/: gui.cpp  gui.hpp
sources/gui/comboBox/: comboBox.cpp  comboBox.hpp
sources/gui/label/: label.cpp
sources/gui/textBox/: textBox.cpp  textBox.hpp
sources/util/: util.cpp  util.hpp
